--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,6 @@ ol {
   min-inline-size: 15px;
   min-block-size: 15px;
   background: #fff;
-  text-decoration: none;
 }
 
 .search-form__label-text {
@@ -170,10 +169,15 @@ ol {
   line-height: normal;
 }
 
-.search-form__label:hover  { 
+
+.search-form__label:hover .search-form__label-text { 
   text-decoration: underline;
-  text-underline-position: under; 
+  text-underline-position: under;
 } 
+.search-form__label:active .search-form__label-text {
+  text-decoration: none;
+}
+
 
 .button {
   cursor: pointer;
